<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simple_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/base_margin"
                android:background="@drawable/shape_white_corner16"
                android:elevation="@dimen/_2dp"
                app:layout_constraintTop_toTopOf="parent">

                <guru.maze.avatar.view.widget.ItemLiner
                    android:id="@+id/item_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_name="@string/user_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <guru.maze.avatar.view.widget.ItemLiner
                    android:id="@+id/item_account_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_name="@string/account_info"
                    app:layout_constraintTop_toBottomOf="@+id/item_username" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/app_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/base_margin"
                android:background="@drawable/shape_white_corner16"
                android:elevation="@dimen/_2dp"
                app:layout_constraintTop_toBottomOf="@+id/user_container">


                <guru.maze.avatar.view.widget.ItemLiner
                    android:id="@+id/policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_name="@string/policy"
                    app:layout_constraintTop_toTopOf="parent" />


                <guru.maze.avatar.view.widget.ItemLiner
                    android:id="@+id/item_faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_name="@string/FAQ"
                    app:layout_constraintTop_toBottomOf="@+id/policy" />

                <guru.maze.avatar.view.widget.ItemLiner
                    android:id="@+id/item_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_name="@string/about_us"
                    app:layout_constraintTop_toBottomOf="@+id/item_faq" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mode_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/base_margin"
                android:layout_marginBottom="@dimen/_20dp"
                android:background="@drawable/shape_white_corner16"
                android:elevation="@dimen/_2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_container">

                <guru.maze.avatar.view.widget.ItemLiner
                    android:id="@+id/item_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />

                <guru.maze.avatar.view.widget.ItemLiner
                    android:id="@+id/item_login_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_name="@string/login_out"
                    app:layout_constraintTop_toBottomOf="@+id/item_dark" />

                <guru.maze.avatar.view.widget.ItemLiner
                    android:id="@+id/item_delete_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:item_name="@string/delete_account"
                    app:item_textColor="@color/base_juice"
                    app:layout_constraintTop_toBottomOf="@+id/item_login_out" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <guru.maze.avatar.view.widget.SimpleTitle
        android:id="@+id/simple_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings" />


</androidx.constraintlayout.widget.ConstraintLayout>