<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/base_margin"
        android:background="@drawable/shape_white_corner16"
        android:elevation="@dimen/_2dp"
        app:layout_constraintTop_toBottomOf="@+id/simple_title">

        <guru.maze.avatar.view.widget.ItemLiner
            android:id="@+id/item_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_name="@string/privacy_policy"
            app:layout_constraintTop_toTopOf="parent" />


        <guru.maze.avatar.view.widget.ItemLiner
            android:id="@+id/item_user_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_name="@string/user_policy"
            app:layout_constraintTop_toBottomOf="@+id/item_privacy_policy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <guru.maze.avatar.view.widget.SimpleTitle
        android:id="@+id/simple_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/policy" />


</androidx.constraintlayout.widget.ConstraintLayout>