<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80dp"
        android:background="@color/base_white"
        app:layout_constraintBottom_toBottomOf="parent">

<!--        <ImageView-->
<!--            android:id="@+id/down_load"-->
<!--            android:layout_width="60dp"-->
<!--            android:layout_height="60dp"-->
<!--            android:background="@drawable/art_download"-->
<!--            android:elevation="@dimen/_2dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_chainStyle="spread"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <View
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/_12dp"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/_12dp"
            android:background="@drawable/shape_button_juice"
            android:gravity="center"
            android:text="@string/select_create"
            android:textColor="@color/common_white"
            android:textSize="@dimen/common_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_height="56dp"/>
        <TextView
            android:id="@+id/click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/download"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/common_white"
            android:textSize="@dimen/common_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container"
        app:layout_constraintTop_toBottomOf="@+id/simple_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginEnd="@dimen/base_margin"
                app:layout_constraintDimensionRatio="3:4"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_common_margin"
                android:textColor="@color/text_black"
                android:textSize="@dimen/common_margin"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/owner_avatar"
                app:layout_constraintStart_toEndOf="@+id/owner_avatar"
                app:layout_constraintTop_toTopOf="@+id/owner_avatar"
                tools:text="xiaok" />

            <TextView
                android:id="@+id/gender_title"
                style="@style/DescTitle"
                android:text="@string/gender"

                app:layout_constraintTop_toBottomOf="@+id/owner_avatar" />


            <TextView
                android:id="@+id/gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginTop="@dimen/_12dp"
                android:textColor="@color/text_black"
                android:textSize="16dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender_title"
                tools:text="sdfsfs" />

            <TextView
                android:id="@+id/style_title"
                style="@style/DescTitle"
                android:text="@string/style"

                app:layout_constraintTop_toBottomOf="@+id/gender_text" />


            <TextView
                android:id="@+id/style_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginTop="@dimen/_12dp"
                android:textColor="@color/text_black"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/style_title"
                tools:text="sdfsfs" />


            <View
                style="@style/LineView"
                android:layout_marginTop="@dimen/half_common_margin"
                app:layout_constraintTop_toBottomOf="@+id/gender_text" />

            <guru.maze.avatar.view.widget.CircleImageView
                android:id="@+id/owner_avatar"
                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginTop="@dimen/common_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_img" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <guru.maze.avatar.view.widget.SimpleTitle
        android:id="@+id/simple_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/digital_human" />


</androidx.constraintlayout.widget.ConstraintLayout>